src/objects/Volume_Discounted_Price__c.object
<CustomObject>
    <description>Object used to store configuration related to Volume Based Discounts.</description>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Volume_From__c</fullName>
        <label>Volume From</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volume_To__c</fullName>
        <label>Volume To</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Volume Discounted Price</label>
    <nameField>
        <label>Volume Discounted Price Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Volume Discounted Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>